# Taxonomy-Agent-with-Teams-Folders-Support

./: .env.template  .gitignore  INSTALLER_STEPS.txt  README.md  TaxonomyAgent.spec  build_windows_installer.bat  config_wizard.py  configure_taxonomy_agent.bat  create_directory.py  launcher.py  pyproject.toml  run_taxonomy_agent.bat  user_guide.docx
.claude/: settings.json
app/: config_manager.py  main.py  preferences.py  runtime_paths.py  settings.py  source_utils.py
app/graph/: build_graph.py  llm_factory.py  output_schemas.py  prompts.py  state.py
app/rag_kb/: README.md  __init__.py  chroma_store.py  cli.py  config.py  hash_utils.py  indexer.py  pptx_extract.py  retriever.py  teams_indexer.py
app/services/: file_finder.py  formatter.py  matcher.py  memory.py  pptx_reader.py  search_tool.py  semantic_retriever.py
app/sharepoint/: client.py  device_auth.py  token_store.py
app/ui/: server.py
app/ui/static/: app.js  styles.css
app/ui/templates/: index.html
core/: logging.py  types.py
installer/: TaxonomyAgent.iss
scripts/: smoke_test.py
tests/: test_file_finder.py  test_graph_contracts.py  test_indexing_local.py  test_indexing_sharepoint.py  test_matcher.py  test_pptx_reader.py  test_search_tool_dynamic.py  test_ui_endpoints.py
